--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Maharashtra Monsoon Prediction System",
   "main": "config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+
+"start": "node server.js"
+
+
   },
   "keywords": [],
   "author": "Ghemud Rutuja",
